# ccf-deadlines

./: .gitignore  .mergify.yml  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  README.zh-CN.md  README_OLD.md  add_accept_rate.py  changes.md  conference-yaml-schema.yml  deadlines_en.ics  deadlines_zh.ics  dict_list.json  index.html  package-lock.json  package.json  vue.config.js
.github/: FUNDING.yml  mergify.yml  pull_request_template.md
.github/workflows/: deploy.yml  ical.yml  merge_check.yml  pre-commit.yml  tests.yml
.readme_assets/: best-practice.drawio
accept_rates/AI/: aaai.yml  acl.yml  acml.yml  aistats.yml  coling.yml  colt.yml  cvpr.yml  ecai.yml  eccv.yml  emnlp.yml  iccv.yml  iclr.yml  icml.yml  iconip.yml  icra.yml  ijcai.yml  ijcnn.yml  iros.yml  naacl.yml  nips.yml  uai.yml
accept_rates/CG/: icassp.yml  icip.yml  icme.yml  icmr.yml  interspeech.yml  mm.yml  sig.yml  siga.yml
accept_rates/CT/: cav.yml  lics.yml  stoc.yml
accept_rates/DB/: cikm.yml  ecir.yml  eusipco.yml  icde.yml  icdm.yml  recsys.yml  sdm.yml  sigir.yml  sigkdd.yml  sigmod.yml  vldb.yml  wsdm.yml
accept_rates/DS/: asplos.yml  atc.yml  eurosys.yml  fast.yml  hpca.yml  isca.yml  iscas.yml  micro.yml  ppopp.yml  rtas.yml  sigmetrics.yml
accept_rates/HI/: chi.yml  cscw.yml  cscwd  ubicomp.yml  uist.yml
accept_rates/MX/: miccai.yml  recomb.yml  rtss.yml  www.yml
accept_rates/NW/: globecom.yml  imc.yml  infocom.yml  mmsys.yml  mobicom.yml  mobihoc.yml  mobisys.yml  nsdi.yml  sensys.yml  sigcomm.yml
accept_rates/SC/: acsac.yml  ccs.yml  crypto.yml  esorics.yml  eurocrypt.yml  fse.yml  ih&mmsec.yml  ndss.yml  uss.yml  wisec.yml
accept_rates/SE/: ase.yml  ecoop.yml  icfp.yml  icse.yml  issta.yml  oopsla.yml  osdi.yml  pldi.yml  popl.yml  sosp.yml
add_ons/cli/: req.txt  setup.py
add_ons/ical/: readme.md
cli/: readme.md  req.txt
cli/ccfddl/: __main__.py  (+1 more)
conference/: types.yml  types_caai.yml
extensions/cli/: pyproject.toml  readme.md  req.txt
extensions/cli/ccfddl/: __init__.py  __main__.py  cache.py  convert_to_ical.py  convert_to_rss.py  fetch.py  models.py  output.py  utils.py
extensions/cli/ccfddl/tests/: test_main.py  test_models.py
extensions/cli/tests/: conftest.py  test_cache.py  test_convert_to_ical.py  test_convert_to_rss.py  test_main.py  test_models.py  test_utils.py
extensions/tui/: README.md  pyproject.toml
extensions/tui/ccfddl_tui/: __init__.py  app.py  main.py  styles.tcss
extensions/tui/ccfddl_tui/data/: __init__.py  data_service.py
extensions/tui/ccfddl_tui/utils/: __init__.py  formatters.py
extensions/tui/ccfddl_tui/widgets/: __init__.py  conference_table.py  countdown.py  filters.py
extensions/tui/tests/: __init__.py  conftest.py  test_app.py  test_conference_table.py  test_countdown.py  test_data_service.py  test_extended_filters.py  test_favorites.py  test_filters.py
public/: styles.css
scripts/: merge.py  pre-commit  validate  validate.py
src/: App.vue  lib.rs  main.js  main.rs
(+450 files in other folders)
