[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccfddl-tui"
version = "0.1.0"
description = "TUI tool for CCFDDL - Conference Deadline Tracker"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "textual>=0.47.0",
    "pyyaml",
    "requests",
    "python-dateutil",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
ccfddl-tui = "ccfddl_tui.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["textual.*"]
ignore_missing_imports = true
